<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/add_sight_city_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
        <EditText 
            android:id="@+id/add_sight_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sight_name"/>
        <EditText
            android:id="@+id/add_sight_description"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:hint="@string/sight_description"/>
        <EditText 
            android:id="@+id/add_sight_latitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/sight_latitude"/>
        <EditText 
            android:id="@+id/add_sight_longitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/sight_longitude"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_coordinates"
            android:onClick="getCoordinates"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_sight"
            android:onClick="addSight"/>
    </LinearLayout>
</ScrollView>